# Rust-backend

./: Cargo.toml
data/: todo.db
rust-yew-boilerplate/: Cargo.toml  package-lock.json  package.json
rust-yew-boilerplate/src/: main.rs
rust-yew-boilerplate/src/screens/: home.rs  todo.rs
rust-yew-boilerplate/src/styles/: output.css
src/: main.rs
src/controller/: create_todo.rs  delete_todo.rs  get_todo.rs  get_todos.rs  update_todo.rs
src/middleware/: api_response.rs
src/types/: mod.rs
