[package]
name = "backend-crud-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = {version = "1.0.226", features=["derive"]}
serde_json = "1.0.145"
sqlite = "0.37.0"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors"] }
